@@ -2,6 +2,7 @@
 v4.2.0-git
 ----------
 
+[jan] Always display system task lists to administrators.
 [mjr] Group task fields into tabs on edit form (Request #13228).
 
 
